// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android BpkCard should render correctly 1`] = `
<View
  accessibilityComponentType="button"
  accessibilityLabel="Example Card"
  accessibilityTraits={undefined}
  accessible={true}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
      },
      Array [
        Array [
          Object {
            "backgroundColor": "rgb(255, 255, 255)",
            "elevation": 3,
            "shadowColor": "rgb(37, 32, 51)",
            "shadowOffset": Object {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.3,
            "shadowRadius": 3,
          },
          Object {
            "borderRadius": 8,
          },
          Object {
            "padding": 16,
          },
        ],
        null,
      ],
    ]
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Array [
        Object {
          "overflow": "hidden",
        },
        Object {
          "borderRadius": 8,
        },
      ]
    }
  >
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "sans-serif",
              "fontSize": 24,
              "fontWeight": undefined,
              "lineHeight": 32,
            },
            false,
            Object {},
          ]
        }
      >
        Flights to Edinburgh
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "sans-serif-medium",
              "fontSize": 20,
              "fontWeight": undefined,
              "lineHeight": 28,
            },
            false,
            Object {},
          ]
        }
      >
        Flights to Edinburgh
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "sans-serif",
              "fontSize": 16,
              "fontWeight": undefined,
              "lineHeight": 24,
            },
            false,
            Object {},
          ]
        }
      >
        Flights to Edinburgh
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "sans-serif-medium",
              "fontSize": 14,
              "fontWeight": undefined,
              "lineHeight": 24,
            },
            false,
            Object {},
          ]
        }
      >
        Flights to Edinburgh
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "sans-serif",
              "fontSize": 14,
              "fontWeight": undefined,
              "lineHeight": 20,
            },
            false,
            Object {},
          ]
        }
      >
        Flights to Edinburgh
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "sans-serif",
              "fontSize": 12,
              "fontWeight": undefined,
              "lineHeight": 16,
            },
            false,
            Object {},
          ]
        }
      >
        Flights to Edinburgh
      </Text>
    </View>
  </View>
</View>
`;

exports[`Android BpkCard should render correctly without padding 1`] = `
<View
  accessibilityComponentType="button"
  accessibilityLabel="Example Card"
  accessibilityTraits={undefined}
  accessible={true}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
      },
      Array [
        Array [
          Object {
            "backgroundColor": "rgb(255, 255, 255)",
            "elevation": 3,
            "shadowColor": "rgb(37, 32, 51)",
            "shadowOffset": Object {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.3,
            "shadowRadius": 3,
          },
          Object {
            "borderRadius": 8,
          },
        ],
        null,
      ],
    ]
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Array [
        Object {
          "overflow": "hidden",
        },
        Object {
          "borderRadius": 8,
        },
      ]
    }
  >
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "sans-serif",
              "fontSize": 24,
              "fontWeight": undefined,
              "lineHeight": 32,
            },
            false,
            Object {},
          ]
        }
      >
        Flights to Edinburgh
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "sans-serif-medium",
              "fontSize": 20,
              "fontWeight": undefined,
              "lineHeight": 28,
            },
            false,
            Object {},
          ]
        }
      >
        Flights to Edinburgh
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "sans-serif",
              "fontSize": 16,
              "fontWeight": undefined,
              "lineHeight": 24,
            },
            false,
            Object {},
          ]
        }
      >
        Flights to Edinburgh
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "sans-serif-medium",
              "fontSize": 14,
              "fontWeight": undefined,
              "lineHeight": 24,
            },
            false,
            Object {},
          ]
        }
      >
        Flights to Edinburgh
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "sans-serif",
              "fontSize": 14,
              "fontWeight": undefined,
              "lineHeight": 20,
            },
            false,
            Object {},
          ]
        }
      >
        Flights to Edinburgh
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "sans-serif",
              "fontSize": 12,
              "fontWeight": undefined,
              "lineHeight": 16,
            },
            false,
            Object {},
          ]
        }
      >
        Flights to Edinburgh
      </Text>
    </View>
  </View>
</View>
`;
